# accio-tools

./: .gitignore  LICENSE  Note-to-reviewer.md  README.md
A00-raw-research/: A00-02-tool-routing-deep-exploration.md  A00-03-routing-benchmark-deep-dive.md  A00-04-tool-reader-architecture-options.md  A00-07-router-algorithm-selection-decision.md  A00-08-router-evidence-learning-log.md  A00-09-mvp-build-decision-table.md  raw01-chatgpt-notes.md  tool-routing-50-query-candidates.json
A00-raw-research/benchmarks/tool-routing-subset/: A00-05-routing-subset-benchmark-readme.md  README.md  tools.json
A00-raw-research/scripts/: build_tool_routing_subset.py
A01-journal/: J01-6hours.md  J02-router-algorithm-selection.md
A02-routers-solutions/A00-raw-ref/: Take-Home-Assignment.md  assignment-agent-prompt.json
A02-routers-solutions/solution01/: Cargo.toml  S01-Router-User-Journey-v1.drawio  S01-mvp-router-executable-specs.md  S01-router-tdd-progress-log.md  S02-query-level-router-specs.md  S02-query-router-progress-log.md  S03-router-explainer-model-specs.md  S03-router-explainer-progress.md
A02-routers-solutions/solution01/crates/benchmark-eval-metrics-runner/: Cargo.toml
A02-routers-solutions/solution01/crates/benchmark-eval-metrics-runner/src/: lib.rs
A02-routers-solutions/solution01/crates/candidate-judge-openai-adapter/: Cargo.toml
A02-routers-solutions/solution01/crates/candidate-judge-openai-adapter/src/: lib.rs
A02-routers-solutions/solution01/crates/catalog-router-core-engine/: Cargo.toml
A02-routers-solutions/solution01/crates/catalog-router-core-engine/src/: lib.rs
A02-routers-solutions/solution01/crates/router-cli-command-surface/: Cargo.toml
A02-routers-solutions/solution01/crates/router-cli-command-surface/src/: main.rs
A02-routers-solutions/solution01/prompts/: fix-patch.md  ideal_voice_prompt_structure.json  llm-judge.md  reverify-prompt.md
A02-routers-solutions/solution01/src/: commands.rs  deterministic_verifier.rs  diagnostic_logger.rs  error.rs  judge_runner.rs  lib.rs  llm_verifier.rs  model.rs  openai_client.rs  openai_config.rs  patch_runner.rs  prompt_normalizer.rs  prompt_parser.rs  recommendation_engine.rs  reporter.rs  version_store.rs
A02-routers-solutions/solution01/src-tauri/: Cargo.toml  tauri.conf.json
A02-routers-solutions/solution01/src-tauri/capabilities/: default.json
A02-routers-solutions/solution01/src-tauri/src/: commands.rs  lib.rs  main.rs
A02-routers-solutions/solution01/tests/: pie_core_contracts.rs
A02-routers-solutions/solution01/ui/: index.html  package-lock.json  package.json  vite.config.ts
A02-routers-solutions/solution01/ui/scripts/: verify-responsive-layout-viewports.mjs
A02-routers-solutions/solution01/ui/src/: app.test.ts  app.ts  main.ts  styles.css  types.ts
benchmarks/tool-routing-subset/: manifest.json  queries.json  source-audit.md
ignore-references/: why-this-folder-exists.md
scripts/: build_tool_routing_subset.py  run_tool_routing_baseline.py
