[package]
name = "pie-tauri-core"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "src-tauri"]
resolver = "2"

[lib]
name = "pie_tauri_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
