[package]
name = "tool-router-tauri-core"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "crates/catalog-router-core-engine",
    "crates/candidate-judge-openai-adapter",
    "crates/benchmark-eval-metrics-runner",
    "crates/router-cli-command-surface",
    "src-tauri",
]
resolver = "2"

[lib]
name = "tool_router_tauri_core"
path = "src/lib.rs"

[dependencies]
benchmark-eval-metrics-runner = { path = "crates/benchmark-eval-metrics-runner" }
candidate-judge-openai-adapter = { path = "crates/candidate-judge-openai-adapter" }
catalog-router-core-engine = { path = "crates/catalog-router-core-engine" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
