[package]
name = "pie-tauri-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "pie_tauri_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pie-tauri-core = { path = ".." }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
