[package]
name = "tool-router-tauri-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "tool_router_tauri_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
benchmark-eval-metrics-runner = { path = "../crates/benchmark-eval-metrics-runner" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tool-router-tauri-core = { path = ".." }
