[package]
name = "candidate-judge-openai-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
catalog-router-core-engine = { path = "../catalog-router-core-engine" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
